<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/download"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kshitizgupta.bluetoothpractice.OptionsActivity"
    tools:showIn="@layout/activity_options">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/tic_tac_toe"
        android:textSize="35sp"
        android:id="@+id/title"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/multiplayer"
        android:layout_below="@+id/title"
        android:textSize="35sp"
        android:textAlignment="center"
        android:id="@+id/textView" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/same_device"
        android:id="@+id/same_screen"
        android:background="@color/colorWhite"
        android:textSize="16sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/over_bluetooth"
        android:background="@color/colorWhite"
        android:id="@+id/over_bluetooth"
        android:textSize="16sp"
        android:layout_marginBottom="122dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/same_screen" />
</RelativeLayout>
